force-app/main/default/objects/Publicity_Package_Item__c/Publicity_Package_Item__c.object-meta.xml
<CustomObject>
    <description>Created as part of HRP-17304</description>
    <label>Publicity Package Item</label>
    <nameField>
        <displayFormat>PPI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publicity Package Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>