force-app/main/default/objects/Publicity_Package_Item__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <referenceTo>Publicity_Package__c</referenceTo>
    <relationshipLabel>Publicity Package Items</relationshipLabel>
    <relationshipName>Publicity_Package_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>