force-app/main/default/objects/Publicity_Package_Item__c/fields/Product_Image_Preview__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_Preview__c</fullName>
    <formula>IMAGE(
SUBSTITUTE(Product_Image_URL__c, &quot;&amp;amp;&quot;, &quot;&amp;&quot;),
&quot;Product Image&quot;,
200,
200
)</formula>
    <label>Product Image Preview</label>
    <type>Text</type>
</CustomField>