force-app/main/default/objects/Publicity_Package_Item__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <label>Product Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>