force-app/main/default/objects/Publicity_Package_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>